<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/label">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|start"
                android:text="@string/format"
                android:textSize="30sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <CheckBox
                android:id="@+id/chbBackground"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/background" />

            <CheckBox
                android:id="@+id/chbTextColor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_color" />

            <CheckBox
                android:id="@+id/chbCenter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/center" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/label">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|start"
                android:text="@string/number_type"
                android:textSize="30sp" />
        </FrameLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdOdd"
                android:text="@string/odd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rdEven"
                android:text="@string/even"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rdBoth"
                android:text="@string/both"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </RadioGroup>

        <Button
            android:id="@+id/btnShow"
            android:text="@string/show_result"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:text="48"
            android:textSize="50sp"
            android:gravity="center"
            android:id="@+id/txtResult"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#eee"/>
    </LinearLayout>

</layout>